apply plugin: 'java'

java {
    sourceCompatibility = JavaVersion.VERSION_21
    targetCompatibility = JavaVersion.VERSION_21
}

version = '1.0'

repositories {
    mavenCentral()
    google()
}

dependencies {
    implementation group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.23.1'
    implementation group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.23.1'
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.10.0'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.10.0'
    testImplementation 'org.mockito:mockito-core:5.0.0'

    implementation 'org.hsqldb:hsqldb:2.7.2' // HSQLDB compatible with Hibernate 6.x
    // Hibernate 6.6, fully compatible with Java 21 and Jakarta EE 9+
    implementation 'org.hibernate:hibernate-core:6.6.0.Final'
    implementation 'org.hibernate.orm:hibernate-jpamodelgen:6.6.0.Final'
    // Jakarta Persistence API for compatibility with Hibernate 6.x
    implementation 'jakarta.persistence:jakarta.persistence-api:3.1.0'
    // JAXB for Java 21 if needed elsewhere
    implementation "jakarta.xml.bind:jakarta.xml.bind-api:3.0"
}

test {
    useJUnitPlatform() // Tell Gradle to use JUnit 5 for tests
    jvmArgs = ['-Dnet.bytebuddy.experimental=true'] //This will allow Mockito to work with Java 21.
}

task hsql(type: JavaExec) {
    main = "org.hsqldb.Server"
    classpath = sourceSets.main.runtimeClasspath
    def databasePath = "${projectDir}/data/POSdb"
    args = ["-database.0", "${databasePath}", "-dbname.0", "POS"]
}
task dbmanager(dependsOn: 'classes', type: JavaExec) {
    main = "org.hsqldb.util.DatabaseManagerSwing"
    classpath = sourceSets.main.runtimeClasspath
    args = ["--user", "sa", "--url", "jdbc:hsqldb:hsql://localhost/POS"]
}
